Repaired position of cart on small screens and added transition

--- a/src/styles/Cart.scss
+++ b/src/styles/Cart.scss
@@ -16,12 +16,14 @@
   position: fixed;
   bottom: -100px;
   height: auto;
+  transition-duration: 2s;
 }
 
 .cart-max {
   position: fixed;
   bottom: 0px;
   height: auto;
+  transition-duration: 2s;
 }
 
 .cart-hidden {
@@ -144,6 +146,10 @@
 @media (max-width: $breakpoint) {
   .cart-visible {
     height: 500px;
+    position: fixed;
+    bottom: 0px;
+    display: flex;
+    justify-content: flex-start;
   }
   .cart-header {
     margin-top: -20px;
@@ -151,7 +157,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 50px;
+    height: 70px;
     width: 90vw;
 
     border-top-left-radius: 10px;
@@ -182,7 +188,12 @@
   }
 
   .cart-min {
-    height: 50px;
+    height: 500px;
+    position: fixed;
+    bottom: -430px;
+    .cart-header {
+      height: 75px;
+    }
   }
   .cart-items {
     width: 90%;
